// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTable Aktiivisen sarakkeen nimen uudelleen klikkaaminen kääntää järjestyksen 1`] = `
<table
  class="table"
>
  <thead
    class="table__head"
  >
    <tr
      class="table__row"
    >
      <th
        class="table__th"
      >
        <div
          class="table__label"
        >
          Nimi
          <span
            class="table__sortindicator table__sortindicator--visible"
          >
            <i
              aria-hidden="true"
              class="material-icons icon icon--inline"
            >
              arrow_drop_up
            </i>
          </span>
        </div>
      </th>
      <th
        class="table__th"
      >
        <div
          class="table__label"
        >
          Oppilaitos
          <span
            class="table__sortindicator"
          />
        </div>
      </th>
    </tr>
  </thead>
  <thead
    class="table__body"
  >
    <tr
      class="table__row"
    >
      <td
        class="table__td"
      >
        Osmo
      </td>
      <td
        class="table__td"
      >
        Celsiuksen koulu
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__td"
      >
        Heli
      </td>
      <td
        class="table__td"
      >
        Beetakaroteenikoulu
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__td"
      >
        Heikki
      </td>
      <td
        class="table__td"
      >
        Aakkoskoulu
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__td"
      >
        Aatu
      </td>
      <td
        class="table__td"
      >
        Deltakoulu
      </td>
    </tr>
  </thead>
</table>
`;

exports[`DataTable Renderöityy oikein 1`] = `
<table
  class="table"
>
  <thead
    class="table__head"
  >
    <tr
      class="table__row"
    >
      <th
        class="table__th"
      >
        <div
          class="table__label"
        >
          Nimi
          <span
            class="table__sortindicator table__sortindicator--visible"
          >
            <i
              aria-hidden="true"
              class="material-icons icon icon--inline"
            >
              arrow_drop_down
            </i>
          </span>
        </div>
      </th>
      <th
        class="table__th"
      >
        <div
          class="table__label"
        >
          Oppilaitos
          <span
            class="table__sortindicator"
          />
        </div>
      </th>
    </tr>
  </thead>
  <thead
    class="table__body"
  >
    <tr
      class="table__row"
    >
      <td
        class="table__td"
      >
        Aatu
      </td>
      <td
        class="table__td"
      >
        Deltakoulu
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__td"
      >
        Heikki
      </td>
      <td
        class="table__td"
      >
        Aakkoskoulu
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__td"
      >
        Heli
      </td>
      <td
        class="table__td"
      >
        Beetakaroteenikoulu
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__td"
      >
        Osmo
      </td>
      <td
        class="table__td"
      >
        Celsiuksen koulu
      </td>
    </tr>
  </thead>
</table>
`;

exports[`DataTable Toisen sarakkeen nimen klikkaaminen järjestää sen mukaisesti 1`] = `
<table
  class="table"
>
  <thead
    class="table__head"
  >
    <tr
      class="table__row"
    >
      <th
        class="table__th"
      >
        <div
          class="table__label"
        >
          Nimi
          <span
            class="table__sortindicator"
          />
        </div>
      </th>
      <th
        class="table__th"
      >
        <div
          class="table__label"
        >
          Oppilaitos
          <span
            class="table__sortindicator table__sortindicator--visible"
          >
            <i
              aria-hidden="true"
              class="material-icons icon icon--inline"
            >
              arrow_drop_down
            </i>
          </span>
        </div>
      </th>
    </tr>
  </thead>
  <thead
    class="table__body"
  >
    <tr
      class="table__row"
    >
      <td
        class="table__td"
      >
        Heikki
      </td>
      <td
        class="table__td"
      >
        Aakkoskoulu
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__td"
      >
        Heli
      </td>
      <td
        class="table__td"
      >
        Beetakaroteenikoulu
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__td"
      >
        Osmo
      </td>
      <td
        class="table__td"
      >
        Celsiuksen koulu
      </td>
    </tr>
    <tr
      class="table__row"
    >
      <td
        class="table__td"
      >
        Aatu
      </td>
      <td
        class="table__td"
      >
        Deltakoulu
      </td>
    </tr>
  </thead>
</table>
`;
